# subtitles

./: .env  .gitignore  audio_analyzer.py  main.py  pyproject.toml  readme.md
_ai/: commands.txt
_python/: base.txt  create_venv.ps1  open_venv.ps1  pyproject.toml  site.txt
data/: fps_10_frame_info.json  ocr_result_fps10.json  prompts.json
doc/: dl.txt  readme.md
src/: analyzer.py  audio_analyzer.py  main.py  ocr_analyzer.py  postprocess.py  preprocess.py  processor.py  settings.py
