[project]
name = "project"
version = "0.1.0"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.2.0%2Bcu124-cp312-cp312-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.17.0%2Bcu124-cp312-cp312-win_amd64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu124/torchaudio-2.2.0%2Bcu124-cp312-cp312-win_amd64.whl",
    "torchmetrics",
    "transformers",
    "qwen_vl_utils",
    "accelerate",
    "librosa",
    "opencv-python"
]

[project.optional-dependencies]
dev = [
    # "datasets[audio]",
    # "spacy[cuda12x]",
    # "deepseek_vl @ git+https://github.com/deepseek-ai/DeepSeek-VL2",
    # "flash-attn",
    # "packaging",
    # "ninja",
    # "thefuzz",
    # "requests"
]

[tool.uv]
pip-version = "24.0"
