[project]
name = "aio-processor"
version = "0.1.0"
description = "AI media processing toolkit"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "torchvision>=0.20",
    "torchmetrics>=1.6.1",
    "torchaudio>=2.5.0",
    "transformers>=4.48.1",
    "qwen-vl-utils>=0.0.9",
    "accelerate>=1.3.0",
    "librosa>=0.10.2",
    "opencv-python>=4.11.0.86"
 ]

 [tool.uv.sources]
 pytorch = { url = "https://download.pytorch.org/whl/cu124" }

[project.optional-dependencies]
dev = [
    # "datasets[audio]",
    # "spacy[cuda12x]",
    # "deepseek_vl @ git+https://github.com/deepseek-ai/DeepSeek-VL2",
    # "flash-attn",
    # "packaging>=24.2",
    # "ninja",
    # "thefuzz",
    # "requests>=2.32.3"
]

 [tool.uv]
 pip-version = "24.0"
 resolution = "lowest-direct"
 python = "3.12"
 linker = "clone"

 [build-system]
 requires = ["uv>=0.1.0"]
 build-backend = "uv"