[project]
name = "aio_processor"
version = "0.1.0"
description = "AI media processing toolkit"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.0",
    "transformers>=4.48.1",
    "qwen-vl-utils>=0.0.8",
    "accelerate>=1.3.0",
    "librosa>=0.10.2",
    "opencv-python>=4.11.0.86",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.optional-dependencies]
dev = [
    # "datasets[audio]",
    # "spacy[cuda12x]",
    # "deepseek_vl @ git+https://github.com/deepseek-ai/DeepSeek-VL2",
    # "flash-attn",
    # "packaging>=24.2",
    # "ninja",
    # "thefuzz",
    # "requests>=2.32.3"
]
